# vacancy-parsing

./: README.md  main.py  pyproject.toml
src/: api.py  file_saver.py  vacancy.py
